2000-05-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* acconfig.h (USE_FSU_PTHREADS, USE_MIT_PTHREADS,
	USE_PCTHREADS_PTHREADS):  Removed.

2000-05-01  Gary Houston  <ghouston@arglist.com>

	* Makefile.am: add include_HEADERS.
	libguile.h: moved from libguile directory.  maybe libguile.h should
	be installed in $prefix/include/libguile/libguile.h instead?

2000-04-21  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* qthreads.m4: Removed THREADS_CPPFLAGS.

	* acinclude.m4: Removed qthreads macros.  They are provided in
	qthreads.m4, so these were redundant.

	* acconfig.h (GUILE_DEBUG_MALLOC): New.

	* configure.in: New --enable-debug-malloc configuration option.

2000-03-29  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* acconfig.h (GUILE_PTHREAD_COMPAT): New config variable.

	* configure.in: Enable workaround for COOP-linuxthreads
	compatibility on Linux systems.

2000-03-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* devel: New directory.  Intended to carry documentation related
	to Guile development (as opposed to the doc directory which
	contains documentation related to the use of the current Guile).
	This directory (devel) is not included in the Guile distribution,
	but is accessible via anonymous CVS.

2000-03-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* configure.in: Don't add iselect.o to LIBOBJS.

2000-03-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Added end-tag for local variables.  (Thanks to
	Thien-Thi Nguyen.)

2000-03-12  Gary Houston  <ghouston@arglist.com>

	* README (Guile Documentation, About This Distribution): updated.

2000-03-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* configure.in (ac_cv_struct_timespec): Added test for struct
	timespec.

	* acconfig.h (HAVE_STRUCT_TIMESPEC): Added.

2000-01-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* autogen.sh: Call libtoolize.  Pass --add-missing option to
	automake.  Do not decent into libltdl directory.  The libltdl