@@ -1,3 +1,9 @@
+2000-06-01  Michael Livshin  <mlivshin@bigfoot.com>
+
+	* autogen.sh: call ./guile-aclocal.sh instead of aclocal.
+	
+	* guile-aclocal.sh: new file, works around aclocal problems.
+
 2000-05-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* acconfig.h (USE_FSU_PTHREADS, USE_MIT_PTHREADS,
